deployments/k8s/ingress/istio/streamserver/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: restserver-v1-destination
  namespace: realtime-app
spec:
  host:  restserver-v1.realtime-app.svc.cluster.local
  trafficPolicy:
      tls:
        mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: restserver-v2-destination
  namespace: realtime-app
spec:
  host:  restserver-v2.realtime-app.svc.cluster.local
  trafficPolicy:
      tls:
        mode: DISABLE
