deployments/k8s/ingress/istio/streamserver/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streamserver-virtualservice
  namespace: realtime-app
spec:
  hosts:
  - streamserver.realtime-app.svc.cluster.local
  - stream.realtime
  gateways:
  - realtime-app/streamserver-gateway
  http:
  - route:
    - destination:
        host: streamserver.realtime-app.svc.cluster.local
        port:
          number: 8070
    corsPolicy:
      allowOrigins:
        - regex: ".*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
